<resources>
    <string name="app_name">Rim Happy</string>
    <string name="nome_do_app">Nome do App</string>
    <string name="bebidas">Bebidas</string>
    <string name="cereais">Cereais</string>
    <string name="doces">Doces</string>
    <string name="enlatados">Enlatados</string>
    <string name="leguminosas_sementes">Leguminosas - Sementes</string>
    <string name="leos">Óleos</string>
    <string name="embutidos">Embutidos</string>
    <string name="industrializados">Industrializados</string>
    <string name="leite_e_derivados">Leite e Derivados</string>
    <string name="temperos">Temperos</string>
    <string name="sobre_o_app">Sobre o App</string>
    <string name="title_activity_abacate">Abacate</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>