<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="358dp"
        android:layout_height="61dp"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="27dp"
        android:layout_marginBottom="1dp"
        android:background="#2077E9"
        android:text="@string/nome_do_app"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/doces"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="27dp" />

    <Button
        android:id="@+id/bebidas"
        android:layout_width="113dp"
        android:layout_height="81dp"
        android:onClick="onClickBebidas"
        android:layout_marginStart="30dp"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:text="@string/bebidas"
        app:layout_constraintBottom_toTopOf="@+id/doces"
        app:layout_constraintEnd_toStartOf="@+id/cereais"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/cereais"
        android:layout_width="113dp"
        android:layout_height="81dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:onClick="onClickCereais"
        android:text="@string/cereais"
        app:layout_constraintBottom_toTopOf="@+id/embutidos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bebidas"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/doces"
        android:layout_width="113dp"
        android:layout_height="81dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:text="@string/doces"
        android:onClick="onClickDoces"
        app:layout_constraintBottom_toTopOf="@+id/enlatados"
        app:layout_constraintEnd_toStartOf="@+id/embutidos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bebidas" />

    <Button
        android:id="@+id/enlatados"
        android:layout_width="113dp"
        android:layout_height="81dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:text="@string/enlatados"
        android:textSize="12sp"
        android:onClick="onClickEnlatados"
        app:layout_constraintBottom_toTopOf="@+id/legumes"
        app:layout_constraintEnd_toStartOf="@+id/industria"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/doces" />

    <Button
        android:id="@+id/legumes"
        android:layout_width="113dp"
        android:layout_height="81dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:text="@string/leguminosas_sementes"
        android:textSize="10sp"
        android:onClick="onClickLegumes"
        app:layout_constraintBottom_toTopOf="@+id/oleos"
        app:layout_constraintEnd_toStartOf="@+id/leite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enlatados" />

    <Button
        android:id="@+id/oleos"
        android:layout_width="113dp"
        android:layout_height="81dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="70dp"
        android:text="@string/leos"
        android:onClick="onClickOleos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/temperos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/legumes" />

    <Button
        android:id="@+id/embutidos"
        android:layout_width="113dp"
        android:layout_height="81dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:text="@string/embutidos"
        android:textSize="12sp"
        android:onClick="onClickEmbutidos"
        app:layout_constraintBottom_toTopOf="@+id/industria"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/doces"
        app:layout_constraintTop_toBottomOf="@+id/cereais" />

    <Button
        android:id="@+id/industria"
        android:layout_width="113dp"
        android:layout_height="81dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:text="@string/industrializados"
        android:onClick="onClickIndustrializados"
        app:layout_constraintBottom_toTopOf="@+id/leite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/enlatados"
        app:layout_constraintTop_toBottomOf="@+id/embutidos" />

    <Button
        android:id="@+id/leite"
        android:layout_width="113dp"
        android:layout_height="81dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:text="@string/leite_e_derivados"
        android:textSize="13sp"
        android:onClick="onClickLeite"
        app:layout_constraintBottom_toTopOf="@+id/temperos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/legumes"
        app:layout_constraintTop_toBottomOf="@+id/industria" />

    <Button
        android:id="@+id/temperos"
        android:layout_width="113dp"
        android:layout_height="81dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="70dp"
        android:text="@string/temperos"
        android:textSize="13sp"
        android:onClick="onClickTemperos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/oleos"
        app:layout_constraintTop_toBottomOf="@+id/leite" />

    <Button
        android:id="@+id/sobre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="138dp"
        android:layout_marginTop="625dp"
        android:layout_marginEnd="139dp"
        android:text="@string/sobre_o_app"
        android:onClick="onClickSobre"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:layout_marginRight="139dp"
        android:layout_marginLeft="138dp" />

</androidx.constraintlayout.widget.ConstraintLayout>